--- a/src/app/recognition/recognition.component.html
+++ b/src/app/recognition/recognition.component.html
@@ -3,9 +3,14 @@
 <button (click)="start()" [disabled]="!loaded()">Start</button>
 <button (click)="stop()">Stop</button>
 <meter *ngIf="(vol$ | async) as level" [value]="level"></meter>
-<div class="rendered-text">
-  <div *ngFor="let text of renderedText()">
-    {{text}}
+<div>
+  <div class="rendered-text">
+    <div *ngFor="let text of renderedText()">
+      {{text}}
+    </div>
+  </div>
+  <div class="whisper-text">
+    <span *ngFor="let text of whisperCapturedText()">{{text}}</span>
   </div>
 </div>
 <div class="live-text">{{partialText()}}</div>
