--- a/src/app/recognition/recognition.component.html
+++ b/src/app/recognition/recognition.component.html
@@ -10,7 +10,7 @@
     </div>
   </div>
   <div class="whisper-text">
-    <span *ngFor="let text of whisperCapturedText()">{{text}}</span>
+    <div *ngFor="let text of whisperCapturedText()">{{text}}</div>
   </div>
 </div>
 <div class="live-text">{{partialText()}}</div>
