--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<router-outlet></router-outlet>
+<div class="flex-auto">
+  <zip-captions-header></zip-captions-header>
+  <router-outlet></router-outlet>
+</div>
