--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,13 @@
 <div class="flex flex-row space-x-4 shadow-lg px-8 py-4">
   <span class="flex-auto text-lg sha font-extrabold">Zip Captions</span>
-  <button class="flex-initial flex-grow-0 rounded-full">
-    MENU
-  </button>
+  <div class="dropdown">
+    <label tabindex="0" class="m-1 btn rounded-full">
+      <ng-icon name="heroBars3" size="18" strokeWidth="2.5"></ng-icon>
+    </label>
+    <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-52">
+      <li *ngFor="let item of menuItems">
+        <a>{{item}}</a>
+      </li>
+    </ul>
+  </div>
 </div>
