--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<div class="flex-auto">
+<div class="main flex basis-full flex-col flex-shrink-0 flex-grow">
   <zip-captions-header></zip-captions-header>
   <router-outlet></router-outlet>
+  <zip-captions-footer></zip-captions-footer>
 </div>
