--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,10 @@
 @tailwind utilities;
 
 /* You can add global styles to this file, and also import other style files */
+body {
+  height: 100vh;
+  zip-captions-root {
+    display: flex;
+    height: 100%;
+  }
+}
