--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
-<div class="flex flex-row px-4 py-4 justify-end">
-  <span class="text-sm">Copyright 2023 - Zip Captions</span>
-</div>
+<footer class="footer flex flex-row px-4 py-4 justify-end">
+  <span class="text-sm text-base-content">Copyright 2023 - Zip Captions</span>
+</footer>
