--- a/src/app/recognition/recognition.component.html
+++ b/src/app/recognition/recognition.component.html
@@ -1,34 +1,45 @@
 <div class="flex flex-col justify-start basis-full">
   <ng-container *ngIf="!loaded(); else loadedView">
-    <div class="flex flex-col items-center justify-center">
+    <div class="flex flex-col basis-full items-center justify-center gap-6">
       <div class="text-lg">Enable your microphone</div>
-      <button class="btn" (click)="enable()" [disabled]="errorMessage()">
+      <button class="btn" aria-lable="Enable microphone use" (click)="enable()" [disabled]="errorMessage()">
         <ng-icon name="heroMicrophone"></ng-icon>
       </button>
       <div class="flex-auto text-base font-extrabold text-error" *ngIf="errorMessage() as err">{{err}}</div>
     </div>
   </ng-container>
   <ng-template #loadedView>
-    <div class="flex flex-col">
-      <div class="flex flex-row basis-full items-center">
-        <button class="btn" (click)="start()">Start</button>
-        <button class="btn" (click)="stop()">Stop</button>
-        <span class="flex-grow flex-shrink basis-full"></span>
-        <meter *ngIf="(vol$ | async) as level" [value]="level"></meter>
+    <div class="flex flex-col items-stretch basis-full">
+
+      <div class="flex flex-row self-stretch items-center justify-center px-6 py-2 gap-6">
+        <div class="btn-group-horizontal flex-initial">
+          <button class="btn" aria-label="Start recognition" [ngClass]="{'btn-primary': !isListening()}" [disabled]="isListening()" (click)="start()">
+            <ng-icon name="heroPlayCircle"></ng-icon>
+          </button>
+          <button class="btn" aria-label="Stop recognition" [ngClass]="{'btn-primary': isListening()}" [disabled]="!isListening()" (click)="stop()">
+            <ng-icon name="heroStopCircle"></ng-icon>
+          </button>
+          <button class="btn" aria-label="Stop microphone" [ngClass]="{'btn-primary': loaded()}" [disabled]="!loaded()" (click)="disable()">
+            <ng-icon name="heroStopCircle"></ng-icon>
+          </button>
+        </div>
+        <span class="flex flex-grow flex-auto flex-row items-center justify-center text-sm">
+          <span *ngIf="isListening()">Listening...</span>
+          <span *ngIf="!isListening()">Idle...</span>
+        </span>
+        <progress class="progress-primary w-56" *ngIf="(vol$ | async) as level" [value]="level" max="1"></progress>
       </div>
 
+      <div class="flex flex-col basis-full flex-grow-0 flex-shrink gap-6 px-6 py-6 bg-black justify-end overflow-y-hidden">
+        <div *ngFor="let text of renderedText()">
+          {{text | proper}}
+        </div>
+
+        <div>{{partialText()}}</div>
+        
+      </div>
     </div>
-  
   </ng-template>
 </div>
-  <div>
-  <div class="rendered-text">
-    <div *ngFor="let text of renderedText()">
-      {{text}}
-    </div>
-  </div>
-  <div class="whisper-text">
-    <div *ngFor="let text of whisperCapturedText()">{{text}}</div>
-  </div>
-</div>
-<div class="live-text">{{partialText()}}</div>
+
+
