--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
-<footer class="footer flex flex-auto flex-row justify-end" [@growShrinkVertical]="(growShrink$ | async)">
+<footer class="footer flex flex-auto flex-row justify-end overflow-hidden" [@growShrinkVertical]="(growShrink$ | async)">
   <span class="text-sm mx-4 my-2 text-base-content">Copyright 2023 - Zip Captions</span>
 </footer>
